Bug 262258 - "GNOME session support broken ("save current setup")" [p=ventnor.bugzilla@yahoo.com.au (Michael Ventnor) r=gavin r=bsmedberg a1.9=schrep]